fixed height on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ body, html {
     justify-content: center;
     align-items: flex-start;
     height: 100vh;
-    padding-top: 25px;
+    padding-top: 10px;
 }
 
 @keyframes fadeInFromTop {
@@ -141,7 +141,7 @@ a {
 }
 
 .container.center-view#mainContainer > div {
-    margin-top: -400px;
+    margin-top: -300px;
 }
 
 @media (max-width: 768px) {
